--- a/tiger-fe/package.json
+++ b/tiger-fe/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.27.2",
     "cross-env": "^7.0.3",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
     "react-kakao-login": "^2.1.1",
