--- a/tiger-fe/package.json
+++ b/tiger-fe/package.json
@@ -13,6 +13,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
+    "react-icons": "^4.4.0",
     "react-kakao-login": "^2.1.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
