--- a/tiger-fe/package.json
+++ b/tiger-fe/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "sass": "^1.54.7",
