--- a/tiger-fe/package.json
+++ b/tiger-fe/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
     "react-kakao-login": "^2.1.1",
+    "react-kakao-maps-sdk": "^1.1.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
