--- a/tiger-fe/package.json
+++ b/tiger-fe/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.2",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.0.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
