--- a/tiger-fe/package.json
+++ b/tiger-fe/package.json
@@ -34,7 +34,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "aws s3 sync ./build s3://taiger --profile=ick"
   },
   "eslintConfig": {
     "extends": [
