--- a/tiger-fe/package.json
+++ b/tiger-fe/package.json
@@ -30,6 +30,7 @@
     "react-select": "^5.4.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "sass": "^1.54.7",
     "styled-components": "^5.3.5",
     "swiper": "^8.3.2",
