--- a/tiger-fe/package.json
+++ b/tiger-fe/package.json
@@ -14,6 +14,7 @@
     "cross-env": "^7.0.3",
     "date-fns": "^2.29.2",
     "dotenv": "^16.0.2",
+    "env-cmd": "^10.1.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
