#87 feat added 1to1 chat between owner and renter with sockjs and stomp

--- a/tiger-fe/package.json
+++ b/tiger-fe/package.json
@@ -16,6 +16,8 @@
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.2",
     "env-cmd": "^10.1.0",
+    "moment": "^2.29.4",
+    "net": "^1.0.2",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-daum-postcode": "^3.1.1",
@@ -32,6 +34,8 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "sass": "^1.54.7",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "styled-components": "^5.3.5",
     "swiper": "^8.3.2",
     "web-vitals": "^2.1.0"
