--- a/tiger-fe/package.json
+++ b/tiger-fe/package.json
@@ -12,11 +12,14 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "cross-env": "^7.0.3",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.2",
     "env-cmd": "^10.1.0",
+    "faker": "^6.6.6",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-datepicker": "^4.8.0",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
