--- a/tiger-fe/package.json
+++ b/tiger-fe/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
+    "chartjs-plugin-datalabels": "^2.1.0",
     "cross-env": "^7.0.3",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.2",
