--- a/tiger-fe/package.json
+++ b/tiger-fe/package.json
@@ -42,7 +42,8 @@
     "stompjs": "^2.3.3",
     "styled-components": "^5.3.5",
     "swiper": "^8.3.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "webstomp-client": "^1.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
