--- a/tiger-fe/package.json
+++ b/tiger-fe/package.json
@@ -36,6 +36,7 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
+    "react-toastify": "^9.0.8",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "sass": "^1.54.7",
