--- a/tiger-fe/package.json
+++ b/tiger-fe/package.json
@@ -26,6 +26,7 @@
     "react-datepicker": "^4.8.0",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
     "react-kakao-login": "^2.1.1",
