#138 style added responsive style for renter page_2

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 REACT_APP_IMAGEURL=https://mygitpher.s3.ap-northeast-2.amazonaws.com/
-REACT_APP_SERVER=https://taiger.shop/api
+REACT_APP_SERVER=http://3.39.37.54/api
 
-REACT_APP_BASE_URI=https://taiger.shop
+REACT_APP_BASE_URI=http://3.39.37.54
 
 REACT_APP_KAKAO_LOGIN_API=https://taiger.shop
 REACT_APP_KAKAO_MAP_KEY=13acf6cebfb178bf373f8075467b170a
