--- a/tiger-fe/package.json
+++ b/tiger-fe/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.2",
+    "browser-image-compression": "^2.0.0",
     "chart.js": "^3.9.1",
     "chartjs-plugin-datalabels": "^2.1.0",
     "cross-env": "^7.0.3",
